# simplefi-engine

./: .dockerignore  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.abi_discovery  LICENSE  README.md  SECURITY.md  build_abi_discovery.sh
abi_discovery/: Cargo.toml  README.md  build.rs  docker-compose.yml
abi_discovery/scripts/: restart_on_failure.bat
abi_discovery/src/: check_abis.rs  create_queue.rs  lib.rs  main.rs  scrap_etherscan.rs
abi_discovery/src/client/: main.rs
abi_discovery/src/helpers/: abis.rs  add_factory_addresses.rs  add_unverified_addresses_to_redis_set.rs  check_contracts_from_factory.rs  check_tracked_addresses.rs  contracts.rs  get_addresses_abi.rs  get_four_byte_signatures_event.rs  get_signatures_event.rs  get_tracked_abi_from_mongo.rs  get_tracked_abi_json_from_mongo.rs  get_tracked_abis.rs  get_tracked_abis_json.rs  mod.rs  process_abi.rs  process_abi_json.rs  providers.rs
abi_discovery/src/http/: etherscan.rs
abi_discovery/src/mongo/: mod.rs
abi_discovery/src/proto/: abi_discovery.proto
abi_discovery/src/server/: Dockerfile  main.rs
abi_discovery/src/settings/: main.rs  mod.rs
abi_discovery/src/types/: mod.rs
abi_discovery/tests/: test_abi_bytecode_compare.rs
block_indexer/: Cargo.toml
block_indexer/src/: main.rs
block_indexer/src/settings/: main.rs  mod.rs
block_indexer/src/utils/: mod.rs
blockchain_tracker/: Cargo.toml
blockchain_tracker/src/: main.rs  types.rs
blockchain_tracker/src/settings/: main.rs  mod.rs
bronze/: Cargo.toml
bronze/src/data_lake/: mod.rs
bronze/src/data_lake/evm/: mod.rs
bronze/src/data_lake/types/: mod.rs
bronze/src/mongo/: mod.rs
bronze/src/mongo/methods/: mod.rs  setters.rs
bronze/src/processes/evm/: index_blocks.rs  mod.rs  set_up_db.rs  track_blocks.rs
chain-harvester/: Cargo.toml
chain-harvester/src/: main.rs
chain_drivers/common/: Cargo.toml
chain_drivers/common/src/types/: chain.rs
chain_drivers/ethereum/: Cargo.toml
chain_drivers/ethereum/src/: block_data_indexer.rs  blocks_tracker.rs  chain.rs  lib.rs  logs_tracker.rs
chain_drivers/ethereum/src/types/: mod.rs
chain_drivers/ethereum/src/utils/: decode_logs.rs  mod.rs  subscribe_logs.rs
chains_drivers/: Cargo.toml
chains_drivers/src/: chains.rs  lib.rs  main.rs
chains_drivers/src/common/: base_chain.rs  evm.rs  mod.rs
chains_drivers/src/ethereum/: mainnet.rs  mod.rs  mongo_setup.rs
chains_drivers/src/ethereum/types/: mod.rs
chains_drivers/src/ethereum/utils/: decode_block_mainnet.rs  decode_logs.rs  decode_logs_mainnet.rs  mod.rs
chains_drivers/src/types/: chain.rs  mod.rs
chains_drivers/src/types/base/: mod.rs
chains_drivers/src/types/evm/: block.rs  chain_log.rs  mod.rs  new_heads.rs  transaction.rs
crates/abi_discovery/: Cargo.toml  README.md
crates/abi_discovery/src/mongo/: getters.rs  setters.rs
crates/bronze/: Cargo.toml
crates/bronze/src/: lib.rs
crates/bronze/src/mongo/: mod.rs
crates/gold/: Cargo.toml
crates/gold/src/: lib.rs
crates/gold/src/dragonfly/: daily_aggregation.rs  dragonfly_driver.rs  mod.rs  protocol_driver.rs  protocol_status.rs  volumetrics.rs
crates/gold/src/mongo/: mod.rs
crates/gold/src/processes/: back_sync_protocols.rs  mod.rs  redis_to_mongo.rs  update_protocols.rs
crates/gold/src/protocol_driver/: mod.rs  protocol_driver.rs
crates/gold/src/types/: protocols.rs  shared.rs  (+2 more)
crates/grpc_server/: Cargo.toml  build.rs
crates/grpc_server/proto/: abi_discovery.proto
crates/interfaces/: Cargo.toml
crates/interfaces/src/: error.rs  lib.rs
crates/metrics/: Cargo.toml
crates/metrics/metrics-derive/: Cargo.toml
crates/metrics/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: bits.rs  block.rs  header.rs  hex_bytes.rs  lib.rs  log.rs  market.rs  process.rs  protocol.rs  stage.rs  storage.rs
crates/stages/: Cargo.toml
crates/stages/src/: error.rs  lib.rs  stage.rs  util.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs  shutdown.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs
daily_data_digest/: Cargo.toml
daily_data_digest/src/: main.rs
grpc_server/: Cargo.toml
grpc_server/proto/: abi_discovery.proto
grpc_server/src/: lib.rs  main.rs
grpc_server/src/client/: abi_discovery.rs
grpc_server/src/service/: abi_discovery.rs
message_broker/: Cargo.toml
message_broker/src/: lib.rs
message_broker/tests/: rabbitmq.rs
processes/: Cargo.toml
processes/get_logs/: Cargo.toml
processes/get_txs/: Cargo.toml
processes/src/settings/: main.rs  mod.rs
processes/track_blocks/: Cargo.toml
processes/track_blocks/src/: main.rs
processes/track_logs/: Cargo.toml
processes/track_logs/src/: main.rs
settings/: Cargo.toml
settings/src/: helpers.rs  lib.rs  main.rs
shared_types/: Cargo.toml
shared_types/src/: lib.rs
shared_types/src/abi/: mod.rs
shared_types/src/chains/: mod.rs
shared_types/src/data_lake/: mod.rs
shared_types/src/delta_lake/: mod.rs
shared_types/src/mongo/: abi.rs  mod.rs
shared_types/src/providers/: mod.rs
shared_types/src/redis/: abi.rs  mod.rs
shared_utils/: Cargo.toml
shared_utils/src/: lib.rs  test.rs
shared_utils/src/decoder/: mod.rs
shared_utils/src/logger/: README.md  mod.rs
solidity/: Cargo.toml
solidity/src/: lib.rs
solidity/src/abi_to_binary/: mod.rs
solidity/src/compile_and_extract/: mod.rs
solidity/src/decode_log/: mod.rs
solidity/src/default_abis/: mod.rs
solidity/src/encode_abi/: mod.rs
solidity/tests/: abi_to_binary.rs  compile_and_extract.rs  encode_abi.rs
solidity/tests/fixtures/: ERC20.sol
sync_chain_data_lake/: Cargo.toml
sync_chain_data_lake/src/: main.rs
sync_chain_data_lake/src/settings/: main.rs  mod.rs
sync_chain_data_lake/src/utils/: gcp.rs
third_parties/: Cargo.toml
third_parties/src/: lib.rs
third_parties/src/api/: mod.rs
third_parties/src/broker/: mod.rs
third_parties/src/http/: etherscan.rs  fetch.rs  four_byte.rs  mod.rs
third_parties/src/mongo/: mod.rs
third_parties/src/redis/: mod.rs
types/chains/: Cargo.toml
types/chains/src/: lib.rs
(+373 files in other folders)
