[workspace]

members = [
    # services
    "crates/abi_discovery",
    "crates/grpc_server",
    # pipelines
    "crates/gold",
    "crates/silver",
    "crates/bronze",
    "crates/stages",
    # utils
    "crates/utils/http",
    "crates/utils/logger",
    "crates/utils/redis",
    "crates/utils/chains",
    "crates/utils/settings",
    # types
    "crates/types/abi_discovery",
    "crates/types/chains",
    "crates/types/data_lake",
    "crates/types/mongo",
    "crates/types/redis",
    "crates/types/providers"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.70" # Remember to update .clippy.toml and README.md
homepage = "https://github.com/SimpleFi-finance/simplefi-engine"
repository = "https://github.com/SimpleFi-finance/simplefi-engine"

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
bson = "2.6"
chrono = "0.4.24"
clap = { version = "4.2", features = ["derive"] }
confy = { version = "0.5.1" }
ethers = { version = "2.0.4", features = ["ws", "rustls", "legacy"]}
ethers-providers = "2.0.4"
fern = "0.6"
flate2 = "1.0"
futures = "0.3"
lapin = "2.1.1"
log = "0.4"
hex = "0.4"
http = "0.2"
mongodb = "2.5"
mockito = "1.0"
once_cell = "1.17"
prost = "0.11"
prost-build = "0.11"
rand = "0.8"
rayon = "1.7.0"
redis = { version = "0.23", features = ["tokio-comp"] }
regex = { version = "1.8" }
reqwest = { version = "0.11", features = ["json"] }
ring = { version = "0.16" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
tonic-build = "0.9"
tracing = "0.1"
tungstenite = { version = "0.19.0", features = ["native-tls"] }
ethabi = {version = "18.0.0", features = ["full-serde"]}
google-cloud-storage = "0.11.0"
google-cloud-auth = "0.9.0"
google-cloud-default = "0.2.0"
datafusion = "24.0.0"
object_store = "0.5.6"
url = "2.2.1"
parquet = "43.0.0"
