[workspace]

members = [
    # services
    "crates/abi_discovery",
    "crates/grpc_server",
    # pipelines
    "crates/gold",
    "crates/silver",
    "crates/bronze",
    "crates/stages",
    # storage
    "crates/storage/db",
    "crates/rlp",
    "crates/rlp/rlp-derive",
    "crates/storage/codecs",
    "crates/primitives",
    "crates/storage/provider",
    "crates/interfaces",
    # utils
    "crates/utils/http",
    "crates/utils/logger",
    "crates/utils/redis",
    "crates/utils/chains",
    "crates/utils/settings",
    # types
    "crates/types/abi_discovery",
    "crates/types/chains",
    "crates/types/data_lake",
    "crates/types/mongo",
    "crates/types/redis",
    "crates/types/providers"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/SimpleFi-finance/simplefi-engine"
repository = "https://github.com/SimpleFi-finance/simplefi-engine"

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html


[workspace.dependencies]
db = { path = "./crates/storage/db" }
rlp = { path = "./crates/rlp" }
interfaces = { path = "./crates/interfaces" }
primitives = { path = "./crates/primitives" }
storage-provider = { path = "./crates/storage/provider" }
revm = { version = "3" }
revm-primitives = { version = "=1.1.0"}
rocksdb = { version = "0.21.0", features = [ "zstd" ] }
eyre = "0.6.5"
thiserror = "1.0.30"
tempfile  = "3.2.0"
serde = { version = "1.0.130"}
bytes = "1.0.1"
c-kzg = { git = "https://github.com/ethereum/c-kzg-4844" }
proc-macro2 = "1.0.30"
quote = "1.0.12"
proptest = "1.0.0"
proptest-derive = "0.3.0"
arbitrary = "1.0.0"
secp256k1 = {version = "0.27.0", features = ["global-context", "rand-std", "recovery"]}
strum = "0.25"
time = "0.3.29"
ethabi = "18.0.0"
hex-literal = "0.4.1"
chrono = "0.4.26"
async-trait = "0.1"
bson = "2.6"
clap = { version = "4.2", features = ["derive"] }
confy = { version = "0.5.1" }
ethers = { version = "2.0.4", features = ["ws", "rustls", "legacy"]}
ethers-providers = "2.0.4"
fern = "0.6"
flate2 = "1.0"
futures = "0.3"
lapin = "2.1.1"
log = "0.4"
hex = "0.4"
http = "0.2"
mongodb = "2.5"
mockito = "1.0"
once_cell = "1.17"
prost = "0.11"
prost-build = "0.11"
rand = "0.8"
rayon = "1.7.0"
redis = { version = "0.23", features = ["tokio-comp"] }
regex = { version = "1.8" }
reqwest = { version = "0.11", features = ["json"] }
ring = { version = "0.16" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
tonic-build = "0.9"
tracing = "0.1"
tungstenite = { version = "0.19.0", features = ["native-tls"] }
google-cloud-storage = "0.11.0"
google-cloud-auth = "0.9.0"
google-cloud-default = "0.2.0"
datafusion = "24.0.0"
object_store = "0.5.6"
url = "2.2.1"
parquet = "43.0.0"

[patch."https://github.com/ethereum/c-kzg-4844"]
c-kzg = { git = "https://github.com/rjected/c-kzg-4844", branch = "dan/add-serde-feature" }