[workspace]

members = [
    # bin
    "bin/simp",
    # pipelines
    "crates/gold",
    "crates/silver",
    "crates/bronze",
    "crates/processes",
    "crates/stages",
    # storage
    "crates/storage/db",
    "crates/rlp",
    "crates/rlp/rlp-derive",
    "crates/storage/codecs",
    "crates/primitives",
    "crates/storage/provider",
    "crates/interfaces",
    # rpc
    "crates/tasks",
    "crates/rpc/rpc",
    "crates/rpc/rpc-api",
    "crates/rpc/rpc-builder",
    # utils
    "crates/utils/http",
    "crates/utils/logger",
    "crates/utils/redis",
    "crates/utils/chains",
    "crates/utils/settings",
    "crates/utils/etherscan",
    "crates/utils/tokio",
    # types
    "crates/types/chains",
    # metrics
    "crates/tracing",
    "crates/metrics",
    "crates/metrics/metrics-derive",
]

default-members = ["bin/simp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/SimpleFi-finance/simplefi-engine"
repository = "https://github.com/SimpleFi-finance/simplefi-engine"

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html


[workspace.dependencies]
# simp crates
simp-metrics = { path = "./crates/metrics" }
simp-tasks = { path = "./crates/tasks" }
simp-tracing = { path = "./crates/tracing" }
simp-primitives = { path = "./crates/primitives" }
simp-rpc-builder = { path = "./crates/rpc/rpc-builder" }
simp-tokio-util = { path = './crates/utils/tokio' }
simp-processes = { path = './crates/processes' }
simp-settings = { path = "./crates/utils/settings" }
db = { path = "./crates/storage/db" }
rlp = { path = "./crates/rlp" }
interfaces = { path = "./crates/interfaces" }
storage-provider = { path = "./crates/storage/provider" }
simplefi-http = { path = "./crates/utils/http" }
processes = { path = "./crates/processes" }
stages = { path = "./crates/stages" }
revm = { version = "3" }
revm-primitives = { version = "=1.1.0"}
rocksdb = { version = "0.21.0", features = [ "zstd" ] }
tempfile  = "3.2.0"
serde = { version = "1.0.130"}
c-kzg = { git = "https://github.com/ethereum/c-kzg-4844" }
arbitrary = "1.0.0"
time = "0.3.29"
ethabi = "18.0.0"
hex-literal = "0.4.1"
chrono = "0.4.26"
bson = "2.6"
confy = { version = "0.5.1" }
ethers = { version = "2.0.4", features = ["ws", "rustls", "legacy"]}
ethers-providers = "2.0.4"
fern = "0.6"
flate2 = "1.0"
lapin = "2.1.1"
log = "0.4"
hex = "0.4"
http = "0.2"
hyper = "0.14.20"
mongodb = "2.5"
mockito = "1.0"
once_cell = "1.17"
prost = "0.11"
prost-build = "0.11"
redis = { version = "0.23", features = ["tokio-comp"] }
regex = { version = "1.8" }
reqwest = { version = "0.11", features = ["json"] }
ring = { version = "0.16" }
serde_json = "1.0"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.9"
tonic-build = "0.9"
tokio-util = { version = "0.7.4", features = ["codec"] }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1"
tungstenite = { version = "0.19.0", features = ["native-tls"] }
google-cloud-storage = "0.11.0"
google-cloud-auth = "0.9.0"
google-cloud-default = "0.2.0"
datafusion = "24.0.0"
object_store = "0.5.6"
url = "2.2.1"
parquet = "43.0.0"
aquamarine = "0.3"
anyhow = "1"
jsonrpsee = { version = "0.20", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
metrics = "0.21.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
console-subscriber = "0.2.0"
syn = "2.0"

## proc-macros
proc-macro2 = "1.0"
quote = "1.0"

## crypto
secp256k1 = { version = "0.28.0", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }
bytes = "1.5"
thiserror = "1.0"
rand = "0.8.5"
rayon = "1.7"
clap = "4"
eyre = "0.6"
alloy-primitives = "0.4"
strum = "0.25"

## async
async-trait = "0.1.68"
futures = "0.3.26"
pin-project = "1.0.12"
futures-util = "0.3.25"

## misc-testing
proptest = "1.0"
proptest-derive = "0.3.0"
serial_test = "2"

[patch."https://github.com/ethereum/c-kzg-4844"]
c-kzg = { git = "https://github.com/rjected/c-kzg-4844", branch = "dan/add-serde-feature" }