[package]
name = "abi_discovery"
version = "0.1.0"
edition = "2021"


[dependencies]
bincode = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
mongodb = { workspace = true }
settings = { path = "../settings" }
rand = { workspace = true }
redis = { workspace = true }
serde = { workspace = true, default_features = false, features = ["derive"] }
serde_json = { workspace = true }
shared_types = { path = "../shared_types" }
third_parties = { path = "../third_parties" }
tokio = { workspace = true, features = ["full"] }
