[package]
name = "abi_discovery"
version = "1.0.0"
edition = "2021"


[dependencies]
bson =          { workspace = true }
clap =          { workspace = true, features = ["derive"] }
confy =         { workspace = true }
chrono =        { workspace = true }
ethabi =        { workspace = true }
futures =       { workspace = true }
log =           { workspace = true }
mongodb =       { workspace = true }
redis =         { workspace = true }
reqwest =       { workspace = true }
serde =         { workspace = true, default_features = false, features = ["derive"] }
serde_json =    { workspace = true }
settings =      { path = "../settings" }
shared_types =  { path = "../shared_types" }
shared_utils =  { path = "../shared_utils" }
third_parties = { path = "../third_parties" }
tokio =         { workspace = true, features = ["full"] }

[[bin]]
name = "abi_ethereum_queue_consumers"
path = "src/bin/abi_ethereum_queue_consumers.rs"

[[bin]]
name = "load_contracts_to_redis_set"
path = "src/bin/load_contracts_to_redis_set.rs"
