[package]
name = "block_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = {workspace = true}
tokio = {workspace = true}
third_parties = {path = "../third_parties"}
futures = {workspace = true}
serde_json = {workspace = true}
ethers = {workspace = true}
ethers-providers = {workspace = true}
reqwest = {workspace = true}
rayon = {workspace = true}
chrono = {workspace = true}