[package]
name = "block_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = {workspace = true}
tokio = {workspace = true, features = ["full"]}
clap = { workspace = true, features = ["derive"] }
third_parties = {path = "../third_parties"}
futures = {workspace = true}
serde_json = {workspace = true}
ethers = {workspace = true}
ethers-providers = {workspace = true}
reqwest = {workspace = true}
rayon = {workspace = true}
chrono = {workspace = true}
serde = {workspace = true}
abi_discovery = { path = "../abi_discovery" }
grpc_server = { path = "../grpc_server" }
confy = { workspace = true }
settings = { path = "../settings" }
solidity = { path = "../solidity" }
ethabi = { workspace = true }
hex = {workspace = true}
log = { workspace = true }
shared_utils =  { path = "../shared_utils" }
shared_types =  { path = "../shared_types" }

[[bin]]
name = "generate_settings"
path = "src/settings/main.rs"

[[bin]]
name = "chain_indexer"
path = "src/bin/chain_indexer.rs"
