[package]
name = "blockchain_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
third_parties = { path = "../third_parties" }
serde_json = { workspace = true }
tungstenite = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = {workspace = true}
tokio = {workspace = true, features = ["full"] }
chrono = {workspace = true}
lapin = { workspace = true }
futures = {workspace = true}
confy = { workspace = true }
settings = { path = "../settings" }
log = { workspace = true }
shared_utils =  { path = "../shared_utils" }
shared_types = { path = "../shared_types" }

[[bin]]
name = "generate_settings"
path = "src/settings/main.rs"

[[bin]]
name = "chain_listener"
path = "src/bin/chain_listen.rs"
