[package]
name = "bronze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true}
parquet = {workspace = true}
shared_types = { path = "../shared_types"}
settings = { path = "../settings"}
tokio = { workspace = true }
shared_utils = { path = "../shared_utils"}
redis ={workspace = true}

[[bin]]
name = "track_blocks"
path = "src/processes/evm/track_blocks.rs"

[[bin]]
name = "index_blocks"
path = "src/processes/evm/index_blocks.rs"

[[bin]]
name = "set_up_db"
path = "src/processes/evm/set_up_db.rs"
