[package]
name = "chain-harvester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_types = { path = "../shared_types" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
