[package]
name = "daily_data_digest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

settings = { path = "../settings" }
third_parties = { path = "../third_parties" }
tokio = { workspace = true, features = ["full"] }