[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_discovery = { path = "../abi_discovery" }
log = { workspace = true }
mongodb = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
settings = { path = "../settings" }
shared_types = { path = "../shared_types" }
shared_utils = { path = "../shared_utils" }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
