[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_discovery = { path = "../abi_discovery" }
log = { workspace = true }
mongodb = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
settings = { path = "../settings" }

simplefi-logger = {path = "../utils/logger"}
simplefi-redis = {path = "../utils/redis"}

mongo_types = { path = "../types/mongo" }

tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
