[package]
name = "processes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
tungstenite = { workspace = true }
log = { workspace = true }
settings = { path = "../settings" }
chains_drivers = { path = "../chains_drivers"}
shared_types = { path = "../shared_types"}
shared_utils = { path = "../shared_utils"}
third_parties = { path = "../third_parties"}
rayon = { workspace = true }
grpc_server = { path = "../grpc_server" }
futures = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "track_logs"
path = "src/bin/track_logs.rs"

[[bin]]
name = "track_blocks"
path = "src/bin/track_blocks.rs"

[[bin]]
name = "index_blocks"
path = "src/bin/block_data_indexer.rs"
