[package]
name = "settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = { version = "0.5.1" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
