[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { workspace = true }
clap = { workspace = true, features = ["derive"] }
mongodb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
settings = { path="../settings" }
serde_json = { workspace = true }
