[package]
name = "shared_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", optional = true }
settings = { path = "../settings" }

[features]
with_tracing = ["tracing", "tracing-subscriber"]
