[package]
name = "shared_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", optional = true }
settings = { path = "../settings" }
serde_json = { workspace = true }
rayon = { workspace = true }
ethabi = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
tokio = { workspace = true}
serde = { workspace = true }
mockito = { workspace = true }

[features]
with_tracing = ["tracing", "tracing-subscriber"]

[dev-dependencies]
mockito = { workspace = true }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "0.3" }