[package]
name = "solidity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generate_abis_from_local_contracts"
path = "src/bin/generate_abis_from_local_contracts.rs"
test = false

[[bin]]
name = "generate_abis_json_from_local_contracts"
path = "src/bin/generate_abis_json_from_local_contracts.rs"
test = false



[dependencies]
bincode = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
ethabi = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
mongodb = { workspace = true }
serde_json = { workspace = true }
shared_types = { path = "../shared_types" }
third_parties = { path = "../third_parties" }
tokio = { workspace = true, features = ["full"] }
tracing = { version = "^0.1" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { version = "^0.1" }
tracing-subscriber = "0.3.11"

