[package]
name = "sync_chain_data_lake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
settings = {path = "../settings"}
datafusion = {workspace = true}
object_store = {workspace = true, features = ["gcp"]}
futures = {workspace = true}
url = {workspace = true}