[package]
name = "sync_chain_data_lake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
settings = {path = "../settings"}
datafusion = {workspace = true}
object_store = {workspace = true, features = ["gcp"]}
futures = {workspace = true}
url = {workspace = true}
clap = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
confy ={ workspace = true}
serde_json = {workspace = true}

[[bin]]
name = "sync_chain_db"
path = "src/bin/sync_chain_to_db.rs"

[[bin]]
name = "sync_db_to_datalake"
path = "src/bin/sync_db_to_datalake.rs"

[[bin]]
name = "generate_settings"
path = "src/settings/main.rs"