[package]
name = "third_parties"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lapin = { workspace = true }
log = { workspace = true }
mongodb = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
settings = { path = "../settings" }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "0.3" }

