[package]
name = "ethereum"
version = "0.1.0"
edition = "2021"
nested = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = {workspace = true}
chrono = {workspace = true}
tokio = {workspace = true}
grpc_server = { path = "../../grpc_server"}
lapin = {workspace = true}
log = {workspace = true}
rayon = {workspace = true}
settings = {path = "../../settings"}
shared_utils = {path ="../../shared_utils"}
third_parties = {path="../../third_parties"}
block_indexer = {path="../../block_indexer"}
serde_json = { workspace = true }
tungstenite = { workspace = true }
blockchain_tracker = {path = "../../blockchain_tracker"}
serde = {workspace = true}
logs_subscriber = {path = "../../logs_subscriber"}
shared_types = {path = "../../shared_types"}
common = {path = "../common"}

# [[bin]]
# name = "eth_blocks_tracker"
# path = "src/ethereum/blocks_tracker.rs"

# [[bin]]
# name = "eth_block_data_indexer"
# path = "src/ethereum/block_data_indexer.rs"

# [[bin]]
# name = "eth_logs_decoder"
# path = "src/ethereum/logs_decoder.rs"

# [[bin]]
# name = "eth_logs_tracker"
# path = "src/ethereum/logs_tracker.rs"

# [[bin]]
# name = "eth_history_syncer"
# path = "src/ethereum/history_syncer.rs"