[package]
name = "abi_discovery"
version = "1.0.0"
edition = "2021"


[dependencies]
bson =          { workspace = true }
clap =          { workspace = true, features = ["derive"] }
confy =         { workspace = true }
chrono =        { workspace = true }
ethabi =        { workspace = true }
futures =       { workspace = true }
hex =           { workspace = true }
log =           { workspace = true }
mongodb =       { workspace = true }
redis =         { workspace = true }
regex =         { workspace = true }
reqwest =       { workspace = true }
ring =          { workspace = true }
serde =         { workspace = true, default_features = false, features = ["derive"] }
serde_json =    { workspace = true }
tokio =         { workspace = true, features = ["full"] }

# shared types
mongo_types =  { path = "../types/mongo" }
abi_discovery_types = { path = "../types/abi_discovery" }

#shared utils
simplefi_engine_settings = { path = "../utils/settings" }
simplefi-logger =  { path = "../utils/logger" }
simplefi-redis =  { path = "../utils/redis" }
simplefi-http =  { path = "../utils/http" }

[[bin]]
name = "abi_ethereum_queue_consumers"
path = "src/bin/abi_ethereum_queue_consumers.rs"

[[bin]]
name = "load_contracts_to_redis_set"
path = "src/bin/load_contracts_to_redis_set.rs"
