[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
mongodb = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
abi_discovery = { path = "../abi_discovery" }
simplefi_engine_settings = { path = "../utils/settings" }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }

# shared utils
simplefi-logger = {path = "../utils/logger"}
simplefi-redis = {path = "../utils/redis"}


[build-dependencies]
tonic-build = { workspace = true }
