[package]
name = "abi_discovery_types"
# version = {workspace = true}
# edition = {workspace = true}
# rust-version = {workspace = true}
# homepage = {workspace = true}
# repository = {workspace = true}
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.47"