[package]
name = "simp-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sip-codecs = { path = "../storage/codecs"}
revm-primitives = { workspace = true, features = ["arbitrary"] }
rlp = { workspace = true, features = ["std", "derive", "ethereum-types"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
crunchy = { version = "0.2.2", default-features = false, features = ["limit_256"] }
ruint = { version = "1.9.0", features = ["primitive-types", "rlp"] }

# necessary so we don't hit a "undeclared 'std'": 
# https://github.com/paradigmxyz/reth/pull/177#discussion_r1021172198 
secp256k1.workspace = true
criterion = "0.5"

fixed-hash = { version = "0.8.0", default-features = false, features = ["rustc-hex"] }
serde = { workspace = true }

derive_more = "0.99"
bytes = { workspace = true }
hex-literal = "0.4.1"

sucds = "0.5.0"
hash-db = "0.16"
plain_hasher = "0.2.3"
triehash = "0.8.4"
thiserror = "1.0.30"
hex = "0.4.3"
ethers-core = "2.0.8"
impl-serde = "0.4.0"
serde_json = "1.0.64"
proptest = "1.0.0"
arbitrary = { workspace = true, features = ["derive"] }
modular-bitfield = "0.11.2"
proptest-derive = { version = "0.4" }
test-fuzz = "4"
rand = "0.8.5"
once_cell = "1.17.0"

# for eip-4844
c-kzg = { workspace = true }
tempfile = "3.3"
sha2 = "0.10.7"
rayon = "1.7.0"

strum = { workspace = true, features = ["derive"] }
zstd = { version = "0.12", features = ["experimental"] }
reqwest = { workspace = true }
async-trait = { workspace = true }